--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,6 @@ hyper = { version = "0.13.1", default-features = false, features = ["stream"] }
 serde_yaml = "0.8"
 thiserror = "1"
 url = "2.1.1"
+
+[dev-dependencies]
+httptest = "0.15.1"
