--- a/kubernetes/processbot/templates/processbot.yaml
+++ b/kubernetes/processbot/templates/processbot.yaml
@@ -78,7 +78,7 @@ spec:
             - name: RUST_BACKTRACE
               value: full
             - name: RUST_LOG
-              value: info
+              value: debug
             - name: INSTALLATION_LOGIN
               value: {{ .Values.orgName }}
             - name: PRIVATE_KEY_PATH
