--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,10 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-indent_size = 4
+indent_size = 2
 indent_style = tab
 trim_trailing_whitespace = true
+
+[*.yml]
+indent_style = space
+indent_size = 2
