--- a/kubernetes/processbot/values-parity-prod.yaml
+++ b/kubernetes/processbot/values-parity-prod.yaml
@@ -2,8 +2,10 @@ environment: production
 ingress:
   domain: processbot.parity.io
   annotations:
-    kubernetes.io/ingress.class: traefik
-    traefik.frontend.entryPoints: "https,http"
+    cert-manager.io/cluster-issuer: letsencrypt-http01
+    kubernetes.io/ingress.class: traefik-external
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
 processbot:
   config:
     GITHUB_APP_ID: 51719
