--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,57 +8,53 @@ variables:
   VAULT_AUTH_PATH:                 "gitlab-parity-io-jwt"
   VAULT_AUTH_ROLE:                 "cicd_gitlab_parity_${CI_PROJECT_NAME}"
 
-stages:
-  - check
-  - test
-  - dockerize
-  - deploy-staging
-  - deploy
-
-.docker-env:                       &docker-env
-  image:                           paritytech/ci-linux:production
-  before_script:
-    - rustup show
-    - cargo --version
-    - sccache -s
+default:
+  image: paritytech/ci-linux:production
   retry:
     max: 2
     when:
       - runner_system_failure
       - unknown_failure
       - api_failure
-  dependencies:                    []
-  interruptible:                   true
   tags:
     - linux-docker
+
+stages:
+  - check
+  - test
+  - dockerize
+  - deploy
 
 #### stage:                        check
 
 check:
   stage:                           check
-  <<:                              *docker-env
   script:
     # TODO: create processbot CI image which already has rustfmt and clippy
     - rustup component add rustfmt clippy
     - cargo fmt --all -- --check
-    - cargo clippy -- -Dwarnings
+    - cargo check --all-targets --workspace
+    - cargo clippy --all-targets --workspace -- -Dwarnings
 
 #### stage:                        test
 
-test-build:
+integration-tests:
   stage:                           test
-  <<:                              *docker-env
+  script:
+    - ./scripts/run_integration_tests.sh
+
+build:
+  stage:                           test
   script:
     - cargo test --release --all
     - cargo build --release
-  after_script:
     - mkdir -p ./artifacts/
     - cp ${CARGO_TARGET_DIR}/release/parity-processbot ./artifacts/
     - cp ./Dockerfile ./artifacts/
   artifacts:
     name:                          "${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}"
     when:                          on_success
-    expire_in:                     7 days
+    expire_in:                     1 hour
     paths:
       - ./artifacts/
 
@@ -92,7 +88,7 @@ dockerize-processbot:
   stage:                           dockerize
   <<:                              *build_and_push
   needs:
-    - job:                         test-build
+    - job:                         build
       artifacts:                   true
   only:
     - tags
@@ -136,7 +132,7 @@ dockerize-processbot:
       --set "processbot.secret.GITHUB_APP_ID=${GITHUB_APP_ID}"
 
 deploy-staging:
-  stage:                           deploy-staging
+  stage:                           deploy
   <<:                              *deploy-k8s
   environment:
     name: staging
