--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,92 +30,18 @@ stages:
 
 #### stage: pre
 .uninstall-deployment: &uninstall-deployment
+  image: paritytech/kubetools:3.5.3
   tags:
     - kubernetes-parity-build
   stage: pre
   interruptible: true
   script:
     - helm uninstall "$KUBE_NAMESPACE" --namespace "$KUBE_NAMESPACE"
-    - exit 1
 
 uninstall-staging:
   <<: *uninstall-deployment
   environment:
     name: staging
-
-#### stage:                        check
-
-check:
-  stage:                           check
-  script:
-    # TODO: create processbot CI image which already has rustfmt and clippy
-    - rustup component add rustfmt clippy
-    - cargo fmt --all -- --check
-    - cargo check --all-targets --workspace
-    - cargo clippy --all-targets --workspace -- -Dwarnings
-
-#### stage:                        test
-
-integration-tests:
-  stage:                           test
-  script:
-    - ./scripts/run_integration_tests.sh
-
-tests:
-  stage:                           test
-  script:
-    - cargo test --lib
-
-#### stage:                        build
-
-build:
-  stage:                           build
-  script:
-    - cargo build --release
-    - mkdir -p ./artifacts/
-    - cp ${CARGO_TARGET_DIR}/release/parity-processbot ./artifacts/
-    - cp ./Dockerfile ./artifacts/
-  artifacts:
-    name:                          "${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}"
-    when:                          on_success
-    expire_in:                     1 hour
-    paths:
-      - ./artifacts/
-
-#### stage:                        dockerize
-
-.build_and_push:                   &build_and_push
-  image:                           quay.io/buildah/stable
-  variables:
-    GIT_STRATEGY:                  none
-    DOCKER_IMAGE:                  "${CI_REGISTRY}/${KUBE_NAMESPACE}"
-  interruptible:                   true
-  secrets:
-      DOCKER_HUB_USER:
-        vault:                     cicd/gitlab/parity/DOCKER_HUB_USER@kv
-        file:                      false
-      DOCKER_HUB_PASS:
-        vault:                     cicd/gitlab/parity/DOCKER_HUB_PASS@kv
-        file:                      false
-  script:
-    - cd ./artifacts
-    - buildah bud
-      --format=docker
-      --tag "$DOCKER_IMAGE:$CI_COMMIT_REF_NAME" .
-    - echo "$DOCKER_HUB_PASS" |
-        buildah login --username "$DOCKER_HUB_USER" --password-stdin docker.io
-    - buildah push --format=v2s2 "$DOCKER_IMAGE:$CI_COMMIT_REF_NAME"
-  tags:
-    - kubernetes-parity-build
-
-dockerize-processbot:
-  stage:                           dockerize
-  <<:                              *build_and_push
-  needs:
-    - job:                         build
-      artifacts:                   true
-  only:
-    - tags
 
 #### stage:                        deploy
 
@@ -140,7 +66,7 @@ dockerize-processbot:
       --values "helm/values-${CI_ENVIRONMENT_NAME}.yaml"
       --set "app.INSTALLATION_LOGIN=${GITHUB_ORGANIZATION}"
       --set "app.KUBE_NAMESPACE=${KUBE_NAMESPACE}"
-      --set "app.DOCKER_TAG=${CI_COMMIT_REF_NAME}"
+      --set "app.DOCKER_TAG=pre-v0.16"
       --set "app.PROCESSBOT_KEY=${PROCESSBOT_KEY}"
       --set "app.GITHUB_APP_ID=${GITHUB_APP_ID}"
       --set "app.WEBHOOK_SECRET=${WEBHOOK_SECRET}"
@@ -154,15 +80,3 @@ deploy-staging:
     name: staging
   tags:
     - kubernetes-parity-build
-  only:
-    - /^pre-v[0-9]+\.[0-9]+.*$/
-
-deploy-production:
-  stage:                           deploy
-  <<:                              *deploy-k8s
-  environment:
-    name: parity-prod
-  tags:
-    - kubernetes-parity-build
-  only:
-    - /^v[0-9]+\.[0-9]+.*$/
